--- a/whac-a-mole/index.html
+++ b/whac-a-mole/index.html
@@ -11,14 +11,19 @@
 </head>
 <body>
   <main id="game-container">
+    <div class="start-action-container">
+      <h1 class="title">Welcome to play Whac-a-Mole!</h1>
+      <a v-show="gameProcess === null" class="button" @click="gameStart">Start Game</a>
+      <p v-show="gameProcess !== null">You whac {{ rank }} moles</p>
+    </div>
     <div class="game-map">
-      <span class="game-mole"
+      <div class="game-mole"
         v-for="i in 9"
         :key="i"
         :id="i"
         :class='{"mole-coming":moleStatus[i]}'
-        @click="whac">
-      </span>
+        @mousedown="whac">
+      </div>
     </div>
   </main>
 </body>
