--- a/ninja-list/index.html
+++ b/ninja-list/index.html
@@ -23,7 +23,7 @@
       <input type="text" v-model="newNinja.name"><br>
       
       <span>Ninja ID:</span>
-      <input type="number" v-model="newNinja.id"><br>
+      <input type="number" v-model="newNinja.id"><br><p>{{newNinja.id}}</p>
      
       <span>Ninja skills:</span>
       <input type="text" v-model="newNinja.skills"><br>
